[package]
name = "coderag"
version = "0.1.0"
edition = "2024"
license = "MPL 2.0"
description = "CLI to index codebases for RAG pipelines"

[dependencies]
anyhow = "1.0.97"
clap = { version ="4.5.34", features = ["derive"] }
ignore = "0.4.23"
indicatif = "0.17.11"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
assert_cmd = "2.0.16"